# VtracerSwift

./: .gitignore  Cargo.toml  Package.swift  README.md  build.rs  make_xcframework.sh
VtracerSwift/VtracerSwift.xcodeproj/: project.pbxproj
VtracerSwift/VtracerSwift.xcodeproj/project.xcworkspace/xcuserdata/knyazoleh.xcuserdatad/: UserInterfaceState.xcuserstate
VtracerSwift/VtracerSwift.xcodeproj/xcshareddata/xcschemes/: VtracerSwift.xcscheme
VtracerSwift/VtracerSwift.xcodeproj/xcuserdata/knyazoleh.xcuserdatad/xcschemes/: xcschememanagement.plist
spm/: Package.swift
spm/VtracerSwift.xcframework/: Info.plist
spm/VtracerSwift.xcframework/ios-arm64/VtracerSwift.framework/: Info.plist  MacCatalyst.xcconfig
spm/VtracerSwift.xcframework/ios-arm64/VtracerSwift.framework/Headers/: VtracerSwift-Swift.h
spm/VtracerSwift.xcframework/ios-arm64/VtracerSwift.framework/Modules/: module.modulemap
spm/VtracerSwift.xcframework/ios-arm64/VtracerSwift.framework/_CodeSignature/: CodeResources
spm/VtracerSwift.xcframework/ios-arm64_x86_64-maccatalyst/VtracerSwift.framework/: VtracerSwift
spm/VtracerSwift.xcframework/ios-arm64_x86_64-simulator/VtracerSwift.framework/: Info.plist  Simulator.xcconfig
spm/VtracerSwift.xcframework/ios-arm64_x86_64-simulator/VtracerSwift.framework/Headers/: VtracerSwift-Swift.h  VtracerSwift.h  vtracerlibFFI.h
src/: config.rs  converter.rs  lib.rs  vtracer.udl  vtracerlib.swift  vtracerlibFFI.h
vtracer-ffi/: vtracerlib.swift  vtracerlibFFI.modulemap
(+21 files in other folders)
